--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Aula 4 </title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles/index.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='styles/index.css'> <!--2 codigos de CSS-->
+    <link rel='stylesheet' type='text/css' media='screen' href='styles/geral.css'>
     <script src='main.js'></script>
 </head>
 <body>
@@ -19,12 +20,12 @@
             <nav>
                 <a href="index.html">Home</a>
                 <a href="#">Personagens</a>  <!-- # , cria um link que não leva a lugar nenhum, é temporário-->
-                <a href="#">Temporadas</a>
-                <a href="#">Filmes</a>
-                <a href="#">Mangá</a>
-                <a href="#">Autora</a>
-                <a href="#">Sobre nós</a>
-                <a href="#">Autora</a>
+                <a href="pages/temporadas.html">Temporadas</a> <!-- a href="link" link a pagina html que vai abrir quando clicada-->
+                <a href="pages/filmes.html">Filmes</a>
+                <a href="pages/manga.html">Mangá</a>
+                <a href="pages/autora.html">Autora</a>
+                <a href="pages/sobreNos.html">Sobre nós</a>
+               
             </nav>  <!--Navegação-->
 
         </header>   <!--<div id="cabecalho"></div>-->
