--- a/pages/filmes.html
+++ b/pages/filmes.html
@@ -54,7 +54,7 @@
                             <img src="../images/smFilmeS.jpg" alt="Imagem em fundo cor de rosa, na frente uma menina branca, de cabelo loiro, com uniforme de marinheiro azul, com laço e botas vermelhos." >
                         </div>
                         <div class="textoPostagem"> 
-                            <h4>Primeiro Filme - Sailor Moon R: The Movie (1993)</h4> 
+                            <h4>Segundo Filme - Sailor Moon S: The Movie - Corações de Gelo (1994)</h4> 
 
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia reprehenderit consequatur error dicta omnis ducimus corrupti porro voluptates, eius cumque rerum veniam beatae quae enim at saepe neque nihil. Voluptatem!<br><br>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus explicabo repellendus itaque, eius libero soluta ducimus fugiat modi sunt et alias, ut a, ea autem odit. Voluptatum quae nam natus.</p>
@@ -67,10 +67,10 @@
                     </div>
                     <div class="postagem">
                         <div class="imagemPostagem">
-                            <img src="../images/sailorMoonSuperS1.png" alt="Imagem em fundo cor de rosa, na frente uma menina branca, de cabelo loiro, com uniforme de marinheiro azul, com laço e botas vermelhos." >
+                            <img src="../images/smSuperSMovie.jpg" alt="Imagem em fundo cor de rosa, na frente uma menina branca, de cabelo loiro, com uniforme de marinheiro azul, com laço e botas vermelhos." >
                         </div>
                         <div class="textoPostagem"> 
-                            <h4>Primeiro Filme - Sailor Moon R: The Movie (1993)</h4> 
+                            <h4>Terceiro Filme - Sailor Moon Super S: The Movie - O Buraco Negro dos Sonhos (1995)</h4> 
 
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia reprehenderit consequatur error dicta omnis ducimus corrupti porro voluptates, eius cumque rerum veniam beatae quae enim at saepe neque nihil. Voluptatem!<br><br>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus explicabo repellendus itaque, eius libero soluta ducimus fugiat modi sunt et alias, ut a, ea autem odit. Voluptatum quae nam natus.</p>
