--- a/pages/filmes.html
+++ b/pages/filmes.html
@@ -30,12 +30,12 @@
         </header> 
 
         <main>
-                <h3>Primeiro Filme - Sailor Moon R: The Movie (1993)</h3>
+                <h1>Filmografia - Sailor Moon</h1>
             
                 <section>
                     <div class="postagem">
                         <div class="imagemPostagem">
-                            <img src="../images/smFilmeR.jpg" alt="Imagem em fundo cor de rosa, na frente uma menina branca, de cabelo loiro, com uniforme de marinheiro azul, com laço e botas vermelhos." >
+                            <img src="../images/smMovieRposter.jpg" alt="Imagem em fundo cor de rosa, na frente uma menina branca, de cabelo loiro, com uniforme de marinheiro azul, com laço e botas vermelhos." >
                         </div>
                         <div class="textoPostagem"> 
                             <h4>Primeiro Filme - Sailor Moon R: The Movie - A promessa da rosa (1993)</h4> 
@@ -51,7 +51,7 @@
                     </div>
                     <div class="postagem">
                         <div class="imagemPostagem">
-                            <img src="../images/smFilmeS.jpg" alt="Imagem em fundo cor de rosa, na frente uma menina branca, de cabelo loiro, com uniforme de marinheiro azul, com laço e botas vermelhos." >
+                            <img src="../images/Sailor_Moon_S_The_Movie_poster.jpg" alt="Imagem em fundo cor de rosa, na frente uma menina branca, de cabelo loiro, com uniforme de marinheiro azul, com laço e botas vermelhos." >
                         </div>
                         <div class="textoPostagem"> 
                             <h4>Segundo Filme - Sailor Moon S: The Movie - Corações de Gelo (1994)</h4> 
@@ -84,10 +84,10 @@
                     
                     <div class="postagem">
                         <div class="imagemPostagem">
-                            <img src="../images/sm1.webp" alt="Imagem em fundo cor de rosa, na frente uma menina branca, de cabelo loiro, com uniforme de marinheiro azul, com laço e botas vermelhos." >
+                            <img src="../images/smEternalMoviePoster1.jpg" alt="Imagem em fundo cor de rosa, na frente uma menina branca, de cabelo loiro, com uniforme de marinheiro azul, com laço e botas vermelhos." >
                         </div>
                         <div class="textoPostagem"> 
-                            <h4>Primeiro Filme - Sailor Moon R: The Movie (1993)</h4> 
+                            <h4>Quarto filme - Sailor Moon Eternal (2023)</h4> 
 
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia reprehenderit consequatur error dicta omnis ducimus corrupti porro voluptates, eius cumque rerum veniam beatae quae enim at saepe neque nihil. Voluptatem!<br><br>
                                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus explicabo repellendus itaque, eius libero soluta ducimus fugiat modi sunt et alias, ut a, ea autem odit. Voluptatum quae nam natus.</p>
