--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             </div>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Personagens</a>  <!-- # , cria um link que não leva a lugar nenhum, é temporário-->
+                <a href="#personagens">Personagens</a>  <!-- # , cria um link que não leva a lugar nenhum, é temporário-->
+<!--A id, #personagens, leva ate a parte da pagina Personagens-->
                 <a href="pages/temporadas.html">Temporadas</a> <!-- a href="link" link a pagina html que vai abrir quando clicada-->
                 <a href="pages/filmes.html">Filmes</a>
                 <a href="pages/manga.html">Mangá</a>
@@ -30,14 +31,14 @@
 
         </header>   <!--<div id="cabecalho"></div>-->
         <main>
-            <h2>Sailor Moon</h2>
+            <h1>Sailor Moon</h1>
             <div id="banner"></div>
 
         <h3>Sailor Moon</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum aut itaque accusamus sint quas quae tempore sit! Nulla iure earum aut dolor, illum tempora reprehenderit beatae blanditiis doloremque, officia minima!
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae minima earum porro incidunt nesciunt voluptates modi itaque consequatur, ea ipsum, aspernatur pariatur vero, commodi possimus quibusdam unde ad suscipit asperiores.
         </p>
-        <h3>Personagens</h3>
+        <h3 id="personagens">Personagens</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia labore fuga, autem harum magnam deserunt. Assumenda nostrum eum nemo velit, quas necessitatibus, dolorem iste illo atque voluptates illum facilis recusandae.
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae delectus magnam provident vel, dolore similique sapiente eligendi facere numquam, dicta expedita quos earum exercitationem quaerat fugit non. Ad, consectetur dolores?
         </p>
