--- a/pages/sobreNos.html
+++ b/pages/sobreNos.html
@@ -6,6 +6,8 @@
     <title>Sobre Nós</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../styles/geral.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='../styles/sobreNos.css'>
+
     <script src='main.js'></script>
 </head>
 <body>
@@ -26,7 +28,20 @@
             </nav>  <!--Navegação-->
 
         </header> 
-        <main></main>
+        <main>
+            
+            <div id="caixaImagem"></div>
+            <section>
+                <div id="foto"></div>
+                <div id="texto">
+                    <h3>Sobre a desenvolvedora: </h3>
+                    <p>Página desenvolvida como Projeto Final do Curso de Desenvolvimento Front End do SENAI Brasília 2023.
+                    </p>
+                    <p>Foram usados conhecimentos em HTML 5, CSS 3, Bootstrap e Javascript.</p>
+                    <p>Amanda Moreira</p>
+                </div>
+            </section>
+        </main>
 
         <footer> 
             <p>Todos os direitos reservados a @amandallmoreira</p>
